# agent-commerce

./: .gitignore  CREATE_PRODUCTS_BUCKET_POLICIES.sql  DEPLOY_PAGE_IMPROVEMENTS.md  FIX_OWNER_COLUMN.md  NEW_FLOW_COMPLETE.md  PIXEL_GRID_50x20_UPDATE.md  PIXEL_MARKETPLACE_COMPLETE.md  PIXEL_SYSTEM_COMPLETE.md  PRODUCT_IMAGE_UPLOAD_SETUP.md  README.md  RUN_GRID_EXPANSION_MIGRATION.md  RUN_PRODUCT_IMAGES_MIGRATION.md  RUN_THIS_MIGRATION_FIRST.md  SETUP_PRODUCTS_BUCKET.md  SIMPLE_IMAGE_UPLOAD_TEST.md  SUPABASE_MIGRATION_GUIDE.md  SUPABASE_SETUP_STEPS.md  TODOS_COMPLETE.md  VIEW_PRODUCTS_FEATURE.md  folder-structure.txt  railway.toml
backend/: .dockerignore  .env.example  API_QUICK_REFERENCE.md  Dockerfile  PAYMENT_UPDATE_SUMMARY.md  RAILWAY_DEPLOYMENT.md  README.md  SINGLE_NEGOTIATION_IMPLEMENTATION.md  chaoschain_wallets.json  docker-compose.yml  index.ts  main.py  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt
backend/agents/: __init__.py  merchant_agent.py  shopping_agent.py
backend/database/: USERS_TABLE_INTEGRATION.md
backend/docs/: PAYMENT_FIX_SUMMARY.md  QUICK_START_PAYMENTS.md  SINGLE_NEGOTIATION_ENDPOINT.md  agent0_docs.md  chaoschain_a2a_payments.md  database_schema.md  negotiation_storage_summary.md
backend/middleware/: __init__.py  auth.py  logging.py
backend/scripts/: __init__.py  test_multi_product_negotiation.py  test_negotiation.py  test_negotiation_with_payment.py  test_single_negotiation.py
backend/services/: __init__.py  shopping_service.py
backend/utils/: chaoschain.py  image_upload.py  wallet.py
(+65 files in other folders)
