[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chaoschain-sdk>=0.2.10",
    "eth-account>=0.13.7",
    "fastapi>=0.121.3",
    "httpx>=0.25.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "supabase>=2.0.0",
    "uvicorn>=0.38.0",
    "web3>=7.14.0",
]
